--- a/src/layouts/Calendar/YearLayout.css
+++ b/src/layouts/Calendar/YearLayout.css
@@ -33,8 +33,11 @@
 }
 
 .calendar-year-layout-container {
+	gap: 20px;
 	padding: 0 40px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
+
+/* Calendar */
