--- a/src/layouts/Calendar/YearLayout.css
+++ b/src/layouts/Calendar/YearLayout.css
@@ -1,43 +1,192 @@
-.year-layout-container {
+/* Calendar */
+.yearly__calendar__container {
 	width: 100%;
-	height: auto;
-	overflow-y: auto;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 	overflow-x: auto;
+	height: fit-content;
+	border-radius: 20px;
+	border: 1px solid black;
+	background-color: #5a5a5a;
 }
 
-.btn-year-layout {
-	padding: 10px;
-	width: 200px;
-	border-radius: 58px;
+table.calendar {
+	border-collapse: collapse;
+	border-radius: 20px;
+}
+
+table.calendar thead {
+	color: white;
+	font-size: 2rem;
+	font-weight: bold;
+}
+
+table.calendar thead th {
+	font-weight: bold;
+	padding: 10px 3px;
+}
+
+table.calendar tbody {
+	font-size: 1em;
 	background-color: #f6f6f6;
-	height: fit-content;
-	display: flex;
-	flex-direction: column;
-	gap: 8px;
-	justify-content: center;
-	align-items: center;
+	text-align: center;
+}
+
+table.calendar td {
+	text-align: center;
+	padding: 8px;
+	cursor: pointer;
+	border: 1px solid rgba(185, 185, 185, 0.13);
+	min-width: 15px;
 	border: none;
-	font-size: 1.2rem;
-	margin-bottom: 20px;
+	background-color: #f6f6f6;
+	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+table.calendar tr:last-child td {
+	border-bottom: none;
+}
+
+table.calendar td.month-name {
+	font-weight: bold;
+	text-align: left;
+	cursor: default;
+	border-left: none;
+	font-size: 1.8rem;
+	background-color: #323232;
+	color: white;
+	position: sticky;
+	z-index: 9999;
+	left: 0;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+}
+
+table.calendar td.prev-month,
+table.calendar td.next-month {
+	color: transparent;
+	cursor: default;
+	pointer-events: none;
+}
+
+table.calendar td.week-separator {
+	pointer-events: none;
+	background-color: #5a5a5a;
+	border: none;
+}
+
+table.calendar td.bolder {
+	border: none;
+}
+
+/* Single selected day */
+table.calendar td.selected {
+	background-color: #323232;
+	color: white;
+	font-weight: bold;
+	border-radius: 4px;
+}
+
+/* Selected range */
+table.calendar td.range {
+	background-color: rgba(255, 69, 0, 0.7);
+	font-weight: bold;
+	color: white;
+}
+
+table.calendar td.range-left {
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
+	overflow: hidden;
+	background: orangered;
+}
+
+table.calendar td.range-right {
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;
+	overflow: hidden;
+	background: orangered;
+}
+
+div.calendar-controls {
+	margin: 5px auto;
+	display: table;
+	font-size: 25px;
+	line-height: 35px;
+}
+
+div.calendar-controls div {
+	display: inline;
+}
+
+div.calendar-controls .current-year {
+	margin: 0 30px;
+}
+
+div.calendar-controls .control {
+	font-weight: bolder;
+	color: #323232;
+	font-size: 0.8em;
 	cursor: pointer;
 }
-.btn-year-layout:hover {
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-}
-.calendar-year-detail-layout-container {
-	margin-bottom: 20px;
+
+div.calendar-controls .today {
+	position: absolute;
+	right: 15px;
+	line-height: 35px;
+	font-size: 0.6em;
+	text-transform: uppercase;
 }
 
-.calendar-year-layout-container {
-	gap: 20px;
-	padding: 0 40px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+/* Demo */
+
+/* div#calendar {
+	position: relative;
+	border-radius: 5px;
+	border: 1px solid #5a5a5a;
+	background-color: white;
+	overflow: hidden;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-/* Calendar */
+div#root {
+	display: table;
+	margin: 50px auto;
+}
+
+h2,
+h3,
+h4,
+h5 {
+	text-align: center;
+	color: #404040;
+}
+
+h1 {
+	text-align: center;
+	color: #b10909;
+}
+
+a {
+	color: #b10909;
+	font-weight: bolder;
+	text-decoration: none;
+}
+
+a.demoLink {
+	text-decoration: underline;
+}
+
+div.options {
+	border: 1px solid #b9b9b9;
+	border-radius: 5px;
+	padding: 10px 15px;
+	margin-top: 30px;
+}
+
+div.options select {
+	margin-left: 10px;
+} */
