--- a/src/layouts/Calendar/CalendarLayout.css
+++ b/src/layouts/Calendar/CalendarLayout.css
@@ -81,7 +81,7 @@
 /* type-calendar  */
 .type-plan-calendar-container {
 	padding: 14px 10px 20px 10px;
-	width: 360px;
+	width: 380px;
 	border-radius: 58px;
 	background-color: #f6f6f6;
 	height: fit-content;
@@ -110,13 +110,13 @@
 .description-type-plan-calendar {
 	display: flex;
 	flex-wrap: wrap;
-	width: 360px;
+	width: 100%;
 	height: 80px;
 	font-size: 0.9rem;
 	justify-content: center;
 	align-items: center;
 	overflow-y: auto;
-	padding-right: 10px;
+	/* padding-right: 10px; */
 }
 .description-type-plan-calendar::-webkit-scrollbar {
 	display: none;
