--- a/src/layouts/Calendar/Kindofplan.css
+++ b/src/layouts/Calendar/Kindofplan.css
@@ -154,6 +154,7 @@ input.input-kind-of-plan-option {
 	font-size: 30px;
 	font-weight: 600;
 }
+
 .new-tag-add-info {
 	height: 50px;
 	display: flex;
@@ -163,15 +164,11 @@ input.input-kind-of-plan-option {
 .new-tag-input {
 	width: 90%;
 	font-size: 1rem;
-	padding: 10px;
 	background-color: rgb(245, 245, 245);
 	border-radius: 10px;
-	border: 1px solid;
-}
-.new-tag-add-color {
-	display: flex;
-	height: 60px;
-	padding: 10px;
+	border: none;
+	height: 40px;
+	padding-left: 10px;
 }
 .new-tag-name-color {
 	margin-top: 10px;
@@ -180,10 +177,15 @@ input.input-kind-of-plan-option {
 	font-weight: 550;
 }
 .new-tag-color-option {
-	margin-left: 20px;
+	position: relative;
 	height: 30px;
 	width: 30px;
 	border: 1px solid;
+}
+.tag-color-option {
+	position: absolute;
+	top: 30px;
+	z-index: 9999;
 }
 .new-tag-btn-bottom {
 	height: 70px;
