--- a/src/layouts/Calendar/YearLayout.css
+++ b/src/layouts/Calendar/YearLayout.css
@@ -7,7 +7,22 @@
 	border: 1px solid black;
 	background-color: #5a5a5a;
 }
-
+.yearly__calendar__container::-webkit-scrollbar {
+	display: none;
+}
+.btn-nav__yearly__container {
+	display: flex;
+	font-size: 2rem;
+	border: none;
+	justify-content: space-around;
+	padding-top: 10px;
+	align-items: center;
+}
+.btn-nav__yearly__container button {
+	background-color: transparent;
+	border: none;
+	font-size: 2rem;
+}
 table.calendar {
 	border-collapse: collapse;
 	border-radius: 20px;
@@ -56,8 +71,8 @@ table.calendar td.month-name {
 	position: sticky;
 	z-index: 9999;
 	left: 0;
-	border-top-right-radius: 20px;
-	border-bottom-right-radius: 20px;
+	/* border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px; */
 }
 
 table.calendar td.prev-month,
