--- a/src/components/Calendar/YearlyCalendar.css
+++ b/src/components/Calendar/YearlyCalendar.css
@@ -1,13 +1,13 @@
-.calendar-yearly__container {
+/* .calendar-yearly__container {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	overflow-y: scroll;
-}
+} */
 
 /* header */
-.header-calendar-yearly__container {
-	height: 100px;
+/* .header-calendar-yearly__container {
+	height: 100px;	
 	font-size: 2rem;
 	width: 100%;
 	align-items: center;
@@ -28,11 +28,11 @@
 	justify-content: center;
 	align-items: center;
 	font-size: 2rem;
-}
+} */
 
 /* body */
 
-.body-calendar__yearly__container {
+/* .body-calendar__yearly__container {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -42,19 +42,20 @@
 .each-calendar__yearly__container {
 	display: flex;
 	flex-direction: column;
-	width: calc(900px / 3);
+	width: 900px;
 	height: fit-content;
-}
+} */
 
 /* month */
-.month-calendar__yearly {
+/* .month-calendar__yearly {
 	font-size: 2rem;
-}
+} */
 
 /* day of week */
-.week-of-day__yearly__container {
-	font-size: 1.4rem;
+/* .week-of-day__yearly__container {
+	font-size: 1rem;
 	display: flex;
+	gap: 90px;
 }
 
 .day__yearly {
@@ -62,13 +63,14 @@
 	height: 40px;
 	font-size: 1.4rem;
 	text-align: center;
-}
+} */
 
 /* date of week  */
-.date-calendar__yearly__container {
-	font-size: 1.2rem;
+/* .date-calendar__yearly__container {
+	font-size: 2rem;
 	display: flex;
 	flex-wrap: wrap;
+	gap: 120px;
 }
 .date-calendar__yearly__container button {
 	width: 40px;
@@ -81,4 +83,4 @@
 
 .padding-date__yearly {
 	background-color: blue;
-}
+} */
