--- a/src/layouts/Calendar/CalendarLayout.css
+++ b/src/layouts/Calendar/CalendarLayout.css
@@ -8,7 +8,7 @@
 
 .content-container-calendar {
 	display: grid;
-	grid-template-columns: 400px 900px;
+	grid-template-columns: 440px 900px;
 }
 
 .header-container-calendar {
@@ -24,8 +24,9 @@
 
 /* box1 */
 .box1-calendar {
-	display: grid;
-	grid-template-rows: 80px 400px 110px 210px;
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
 }
 .date-calendar {
 	display: flex;
@@ -87,7 +88,6 @@
 	height: fit-content;
 	display: flex;
 	flex-direction: column;
-	gap: 8px;
 	height: fit-content;
 }
 .type-plan-calendar {
@@ -111,12 +111,12 @@
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
-	height: 80px;
+	height: 100px;
 	font-size: 0.9rem;
 	justify-content: center;
 	align-items: center;
 	overflow-y: auto;
-	/* padding-right: 10px; */
+	padding-left: 10px;
 }
 .description-type-plan-calendar::-webkit-scrollbar {
 	display: none;
@@ -146,19 +146,17 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-top: 48px;
 }
 
 .next-plan-calendar-container {
-	margin-top: 60px;
-	padding-top: 20px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
 	height: fit-content;
 	background-color: #f6f6f6;
-	width: 360px;
+	width: 380px;
 	border-radius: 40px;
+	padding-top: 18px;
 }
 
 .title-next-plan-calender {
