--- a/src/layouts/Calendar/Kindofplan.css
+++ b/src/layouts/Calendar/Kindofplan.css
@@ -150,25 +150,28 @@ input.input-kind-of-plan-option {
 	justify-content: center;
 	align-items: center;
 }
-.new-tag-tittle-info {
-	font-size: 30px;
-	font-weight: 600;
-}
 
 .new-tag-add-info {
 	height: 50px;
 	display: flex;
-	justify-content: center;
+	justify-content: end;
 	align-items: center;
 }
 .new-tag-input {
-	width: 90%;
-	font-size: 1rem;
+	width: 60%;
+	font-size: 1.2rem;
 	background-color: rgb(245, 245, 245);
-	border-radius: 10px;
 	border: none;
-	height: 40px;
+	height: 42px;
 	padding-left: 10px;
+}
+.new-tag-input:focus {
+	outline: auto;
+}
+.add-new-tag-plan {
+	display: flex;
+	margin-left: 50px;
+	gap: 20px;
 }
 .new-tag-name-color {
 	margin-top: 10px;
@@ -176,17 +179,30 @@ input.input-kind-of-plan-option {
 	font-size: 15px;
 	font-weight: 550;
 }
+
 .new-tag-color-option {
-	position: relative;
-	height: 30px;
-	width: 30px;
+	height: 34px;
+	width: 34px;
 	border: 1px solid;
+	display: inline-block;
+	cursor: pointer;
 }
+
 .tag-color-option {
 	position: absolute;
-	top: 30px;
-	z-index: 9999;
+	z-index: 2;
+	right: 438px;
+	top: 388px;
 }
+
+.tag-color-option-cover {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+}
+
 .new-tag-btn-bottom {
 	height: 70px;
 	display: flex;
