--- a/src/layouts/Calendar/CalendarLayout.css
+++ b/src/layouts/Calendar/CalendarLayout.css
@@ -56,11 +56,11 @@
 
 .add-plan-calendar button {
 	cursor: pointer;
-	background-color: #f6f6f6;
+	background-color: #373737;
 	width: 240px;
 	height: 60px;
 	font-size: 20px;
-	color: black;
+	color: #f6f6f6;
 	font-weight: normal;
 	margin-top: 0;
 	border: none;
@@ -68,8 +68,8 @@
 	font-size: 1.6rem;
 }
 .add-plan-calendar button:hover {
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+	background-color: #f6f6f6;
+	color: #373737;
 }
 
 /* main-calendar */
@@ -107,26 +107,21 @@
 	justify-content: center;
 }
 
-.description-type-plan-calendar {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	height: 100px;
-	font-size: 0.9rem;
-	justify-content: center;
-	align-items: center;
-	overflow-y: auto;
-	padding-left: 10px;
-}
 .description-type-plan-calendar::-webkit-scrollbar {
 	display: none;
 }
-
-.description-type-plan-container {
-	align-items: center;
-	margin: 10px 10px 10px 0;
+.description-type-plan-calendar {
+	margin-top: 10px;
+	height: 80px;
 	display: flex;
-	width: fit-content;
+	justify-content: center;
+	flex-wrap: wrap;
+	overflow-y: auto;
+	gap: 10px;
+	padding: 0 20px;
+}
+.description-type-plan-container {
+	display: flex;
 	gap: 10px;
 }
 
@@ -156,26 +151,32 @@
 	background-color: #f6f6f6;
 	width: 380px;
 	border-radius: 40px;
-	padding-top: 18px;
+	padding-bottom: 18px;
 }
 
 .title-next-plan-calender {
 	font-size: 1.3rem;
-	text-align: center;
+	background-color: #373737;
+	color: #f6f6f6;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .detail-next-plan-calendar-container {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	gap: 16px;
 	height: 200px;
 	justify-content: flex-start;
-	padding-left: 20px;
+	padding: 0 0 20px 30px;
 	overflow-y: auto;
 }
 .detail-next-plan-calendar {
 	font-size: 1rem;
 	display: flex;
-	gap: 16px;
+	align-items: center;
+	gap: 20px;
 }
 
 /* box2 */
