--- a/src/layouts/Calendar/WeekLayout.css
+++ b/src/layouts/Calendar/WeekLayout.css
@@ -3,7 +3,7 @@
 	border-radius: 40px;
 	margin-top: 20px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-	width: 900px;
+	width: fit-content;
 	height: 840px;
 	overflow: auto;
 	margin-bottom: 20px;
@@ -73,10 +73,14 @@
 	display: flex;
 	flex-direction: column;
 	padding: 10px;
+	height: 200px;
+}
+.overflow-box-specigic-plan-week {
+	height: 500px;
+	overflow-y: scroll;
 }
 .box-specific-plan-week__container {
 	padding: 10px;
-
 	background: rgba(255, 255, 255, 0);
 	border-radius: 16px;
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
