--- a/src/layouts/Calendar/DayLayout.css
+++ b/src/layouts/Calendar/DayLayout.css
@@ -3,16 +3,17 @@
 	border-radius: 20px;
 	margin-top: 20px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-	padding: 40px 60px;
-	height: 800px;
+	padding: 20px 40px;
+	height: 900px;
 	display: flex;
-	width: 900px;
-	overflow-x: auto;
+	width: 1000px;
+	overflow-y: auto;
 }
 
 .plan-calendar-container {
 	display: flex;
 	gap: 40px;
+	flex-wrap: wrap;
 }
 
 /* detail-plan-calendar */
@@ -23,6 +24,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 40px;
+	height: 100px;
 }
 
 .specific-time-plan-calendar {
