--- a/src/components/Calendar/CreatePlan.css
+++ b/src/components/Calendar/CreatePlan.css
@@ -458,12 +458,12 @@
 	font-size: 18px;
 	font-weight: 600;
 	margin-top: 15px;
-	border: 0px solid;
+	border: 1px solid;
 }
 .go-to-palace-btn-cacel button {
 	cursor: pointer;
 }
-.go-to-palace-btn-cacel button:active {
+.go-to-palace-btn-cacel button:hover {
 	background-color: black;
 	color: white;
 }
@@ -508,7 +508,7 @@
 	font-size: 18px;
 	font-weight: 600;
 	margin-top: 15px;
-	margin-left: 30px;
+	margin-left: 16px;
 }
 .go-to-palace-btn-add button {
 	cursor: pointer;
