--- a/src/layouts/Calendar/DayLayout.css
+++ b/src/layouts/Calendar/DayLayout.css
@@ -73,3 +73,18 @@
 	font-size: 1rem;
 	margin-left: 20px;
 }
+
+/* btn-date */
+.btn-date-calendar button {
+	width: 110px;
+	border: none;
+	background-color: #f6f6f6;
+	height: 50px;
+	font-size: 1.4rem;
+	border-radius: 20px;
+}
+
+.btn-date-calendar button:hover {
+	background-color: #373737;
+	color: #f6f6f6;
+}
