--- a/src/layouts/Calendar/CalendarLayout.css
+++ b/src/layouts/Calendar/CalendarLayout.css
@@ -169,15 +169,20 @@
 	gap: 16px;
 	height: 236px;
 	justify-content: flex-start;
-	padding: 10px 0 20px 30px;
+	padding: 10px 20px 20px 30px;
 	overflow-y: auto;
 }
 .detail-next-plan-calendar {
 	font-size: 1rem;
 	display: flex;
 	gap: 20px;
+	align-items: center;
 }
-
+.date-next-plan-calendar {
+	width: 260px;
+	padding: 2px 0 2px 10px;
+	border-radius: 6px;
+}
 /* box2 */
 .box2-calendar {
 	display: grid;
@@ -206,31 +211,6 @@
 		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
-.btn-search-calendar {
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-	padding-left: 20px;
-	display: flex;
-	background-color: #f6f6f6;
-	height: 30px;
-	width: 320px;
-	gap: 10px;
-	justify-content: center;
-	align-items: center;
-	border-radius: 20px;
-}
-
-.btn-search-calendar input {
-	font-size: 1rem;
-	width: 100%;
-	background-color: #f6f6f6;
-	border: none;
-	justify-content: center;
-	align-items: center;
-}
-
-.btn-search-calendar input:focus {
-	outline: none;
-}
 .btn-date-calendar {
 	margin-left: 30px;
 	display: flex;
