--- a/src/components/Calendar/FindPlan.css
+++ b/src/components/Calendar/FindPlan.css
@@ -10,8 +10,6 @@
 	align-items: center;
 	position: relative;
 }
-.btn-search-calendar:focus {
-}
 
 .btn-search-calendar input {
 	font-size: 1rem;
@@ -35,11 +33,12 @@
 	position: absolute;
 	top: 41px;
 	width: 100%;
-	height: fit-content;
+	height: 200px;
 	overflow-y: scroll;
 	left: 0;
+	gap: 10px;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-	font-size: 1.4rem;
+	font-size: 1.2rem;
 }
 
 .result-item-search-plan {
@@ -47,19 +46,14 @@
 	display: flex;
 	justify-content: start;
 	padding-left: 20px;
-	width: 300px;
-	height: fit-content;
-	padding: 10px 10px 10px 20px;
+	width: 340px;
 	align-items: center;
+	cursor: pointer;
 }
-
-.result-item-search-plan:hover {
-	background-color: #ccc;
-	transform: scale(1.1);
-	display: flex;
-	justify-content: start;
-	padding: 0 10px 0 40px;
-	width: 100%;
-	height: 50px;
-	align-items: center;
+.result-outside-click-search-plan {
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	position: fixed;
 }
