--- a/src/components/Calendar/BasicCalendar.css
+++ b/src/components/Calendar/BasicCalendar.css
@@ -24,14 +24,12 @@
 	min-width: 44px;
 	background: none;
 	font-size: 20px;
-	margin-top: 8px;
 	align-items: center;
 	justify-content: center;
 }
 
-.react-calendar__navigation button:enabled:hover,
-.react-calendar__navigation button:enabled:focus {
-	background-color: #f8f8fa;
+.react-calendar__navigation button:enabled:hover {
+	background-color: #e2e2e5;
 }
 .react-calendar__navigation button[disabled] {
 	background-color: #f0f0f0;
