--- a/src/components/Calendar/FindPlan.css
+++ b/src/components/Calendar/FindPlan.css
@@ -39,6 +39,8 @@
 	gap: 10px;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	font-size: 1.2rem;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .result-item-search-plan {
@@ -49,7 +51,15 @@
 	width: 340px;
 	align-items: center;
 	cursor: pointer;
+	height: 50px;
 }
+
+.result-item-search-plan:hover {
+	transform: scale(1.1);
+	padding-left: 30px;
+	font-weight: bold;
+}
+
 .result-outside-click-search-plan {
 	left: 0;
 	right: 0;
