--- a/src/layouts/Calendar/MonthLayout.css
+++ b/src/layouts/Calendar/MonthLayout.css
@@ -24,6 +24,7 @@
 	border-bottom: 0.8px solid #ccc;
 	padding: 10px 10px 4px 10px;
 	gap: 6px;
+	overflow-y: auto;
 }
 
 .month-layout-box2 {
@@ -41,11 +42,12 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: 10px;
+	height: 80px;
 }
 
 .month-layout-description {
 	margin-top: auto;
-	margin-left: auto;
+	display: flex;
 }
 .content-month-plan-container {
 	width: 70px;
@@ -53,4 +55,8 @@
 	flex-wrap: wrap;
 	height: auto;
 	font-size: 0.8rem;
+}
+.month-day-layout-description {
+	margin-left: auto;
+	margin-top: auto;
 }
