--- a/src/layouts/Calendar/CalendarLayout.css
+++ b/src/layouts/Calendar/CalendarLayout.css
@@ -215,8 +215,8 @@
 }
 
 .time-type-calendar button:hover {
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-		rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+	background-color: #373737;
+	color: #f6f6f6;
 }
 
 .btn-date-calendar {
