--- a/src/components/Calendar/CreatePlan.css
+++ b/src/components/Calendar/CreatePlan.css
@@ -652,3 +652,47 @@
 	align-items: center;
 	z-index: 9999;
 }
+
+.accept-delete-tag-container {
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	background-color: rgba(0, 0, 0, 0.4);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+}
+
+.accept-delete-tag-box {
+	background-color: white;
+	border-radius: 14px;
+	height: 120px;
+	width: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.btn-delete-tag__pop-up {
+	display: flex;
+	margin-top: 20px;
+	gap: 10px;
+}
+
+.btn-delete-tag__pop-up button {
+	height: 40px;
+	width: 90px;
+	background-color: #f6f6f6;
+	border: none;
+	font-size: 1rem;
+	border-radius: 20px;
+}
+
+.btn-delete-tag__pop-up button:hover {
+	background-color: rgb(37, 37, 37);
+	color: white;
+}
