--- a/src/components/Calendar/FindPlan.css
+++ b/src/components/Calendar/FindPlan.css
@@ -37,6 +37,7 @@
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	font-size: 1.2rem;
 	padding-bottom: 10px;
+	z-index: 9999;
 }
 .result-search-plan-tag {
 	height: 18px;
