--- a/src/components/Calendar/CreatePlan.css
+++ b/src/components/Calendar/CreatePlan.css
@@ -568,30 +568,6 @@
 	margin-top: 15px;
 	border: 0px solid;
 }
-.create-name-btn-cacel button {
-	cursor: pointer;
-}
-.create-name-btn-cacel button:active {
-	background-color: black;
-	color: white;
-}
-.create-name-form-btn-create {
-	height: 40px;
-	background-color: black;
-	color: white;
-	width: 90px;
-	border-radius: 20px;
-	font-size: 18px;
-	font-weight: 600;
-	margin-top: 14px;
-}
-.create-name-btn-create button {
-	cursor: pointer;
-}
-.create-name-btn-create button:focus {
-	background-color: white;
-	color: black;
-}
 
 .new-tag-input {
 	width: 60%;
@@ -669,30 +645,47 @@
 .accept-delete-tag-box {
 	background-color: white;
 	border-radius: 14px;
-	height: 120px;
-	width: 300px;
+	height: 200px;
+	width: 460px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	font-size: 1.4rem;
+	gap: 20px;
+	animation-name: fade;
+	animation-duration: 1.3s;
 }
 
 .btn-delete-tag__pop-up {
 	display: flex;
-	margin-top: 20px;
-	gap: 10px;
+	gap: 40px;
 }
 
 .btn-delete-tag__pop-up button {
 	height: 40px;
-	width: 90px;
+	width: 140px;
 	background-color: #f6f6f6;
 	border: none;
-	font-size: 1rem;
+	font-size: 1.4rem;
 	border-radius: 20px;
 }
 
 .btn-delete-tag__pop-up button:hover {
 	background-color: rgb(37, 37, 37);
 	color: white;
+}
+
+@keyframes fade {
+	0% {
+		opacity: 0.2;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+.tag-delete__pop-up {
+	display: flex;
+	gap: 10px;
 }
