--- a/src/components/Calendar/FindPlan.css
+++ b/src/components/Calendar/FindPlan.css
@@ -29,14 +29,12 @@
 	display: flex;
 	flex-direction: column;
 	position: absolute;
-	top: 41px;
+	top: 40px;
 	width: 100%;
-	height: 200px;
-	overflow-y: scroll;
+	height: fit-content;
 	left: 0;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	font-size: 1.2rem;
-	padding-bottom: 10px;
 	z-index: 9999;
 }
 .result-search-plan-tag {
@@ -48,6 +46,7 @@
 	display: flex;
 	align-items: center;
 	padding-left: 10px;
+	width: fit-content;
 }
 .result-item-search-plan {
 	background-color: transparent;
@@ -58,6 +57,7 @@
 	align-items: center;
 	cursor: pointer;
 	height: 50px;
+	overflow-x: hidden;
 }
 
 .result-item-search-plan:hover {
