--- a/src/layouts/Calendar/WeekLayout.css
+++ b/src/layouts/Calendar/WeekLayout.css
@@ -2,7 +2,7 @@
 	border-radius: 40px;
 	margin-top: 20px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-	width: fit-content;
+	width: 1070px;
 	height: 930px;
 	overflow: auto;
 	margin-bottom: 20px;
@@ -74,6 +74,7 @@
 	padding: 10px;
 	height: 200px;
 }
+
 .content-specific-plan-week__container {
 	margin-left: 4px;
 }
@@ -91,6 +92,9 @@
 	border-radius: 10px;
 	box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
 		rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+.box-specific-plan-week__container:hover {
+	transform: scale(1.2);
 }
 .tag-specific-plan-week__container {
 	height: 6px;
