--- a/src/components/Calendar/FindPlan.css
+++ b/src/components/Calendar/FindPlan.css
@@ -31,7 +31,8 @@
 	position: absolute;
 	top: 40px;
 	width: 100%;
-	height: fit-content;
+	max-height: 200px;
+	overflow-y: auto;
 	left: 0;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	font-size: 1.2rem;
